<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_cat_appearance">
        <ListPreference
            app:key="app_theme"
            app:title="@string/pref_theme"
            app:entries="@array/pref_theme_entries"
            app:entryValues="@array/pref_theme_values"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_audio_haptic">
        <SwitchPreferenceCompat
            app:key="haptic_enabled"
            app:title="@string/pref_haptic_enabled"
            app:defaultValue="true" />
        <SeekBarPreference
            app:key="vibration_intensity"
            app:title="@string/pref_vibration_intensity"
            app:defaultValue="25"
            app:min="5"
            android:max="100"
            app:showSeekBarValue="true"
            app:dependency="haptic_enabled" />
        <SwitchPreferenceCompat
            app:key="audio_enabled"
            app:title="@string/pref_audio_enabled"
            app:defaultValue="true" />
        <SeekBarPreference
            app:key="audio_volume"
            app:title="@string/pref_audio_volume"
            app:defaultValue="60"
            app:min="0"
            android:max="100"
            app:showSeekBarValue="true"
            app:dependency="audio_enabled" />
        <ListPreference
            app:key="audio_style"
            app:title="@string/pref_audio_style"
            app:entries="@array/pref_sound_style_entries"
            app:entryValues="@array/pref_sound_style_values"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"
            app:dependency="audio_enabled" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_layout">
        <SeekBarPreference
            app:key="keyboard_height"
            app:title="@string/pref_keyboard_height"
            app:defaultValue="260"
            app:min="220"
            android:max="320"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            app:key="candidate_font_size"
            app:title="@string/pref_candidate_font_size"
            app:defaultValue="16"
            app:min="14"
            android:max="22"
            app:showSeekBarValue="true" />
        <ListPreference
            app:key="one_handed_mode"
            app:title="@string/pref_one_handed"
            app:entries="@array/pref_one_handed_entries"
            app:entryValues="@array/pref_one_handed_values"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="col_4th_position"
            app:title="@string/pref_col_4th_position"
            app:entries="@array/pref_col_position_entries"
            app:entryValues="@array/pref_col_position_values"
            app:defaultValue="right"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="row_4th_position"
            app:title="@string/pref_row_4th_position"
            app:entries="@array/pref_row_position_entries"
            app:entryValues="@array/pref_row_position_values"
            app:defaultValue="bottom"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="row_4th_order"
            app:title="@string/pref_row_4th_order"
            app:entries="@array/pref_row_order_entries"
            app:entryValues="@array/pref_row_order_values"
            app:defaultValue="default"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="col_4th_order"
            app:title="@string/pref_col_4th_order"
            app:entries="@array/pref_col_order_entries"
            app:entryValues="@array/pref_col_order_values"
            app:defaultValue="default"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_typing">
        <ListPreference
            app:key="default_input_mode"
            app:title="@string/pref_default_input_mode"
            app:entries="@array/pref_default_mode_entries"
            app:entryValues="@array/pref_default_mode_values"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            app:key="long_press_delay"
            app:title="@string/pref_long_press_delay"
            app:defaultValue="350"
            app:min="200"
            android:max="600"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            app:key="multi_tap_timeout"
            app:title="@string/pref_multi_tap_timeout"
            app:defaultValue="600"
            app:min="400"
            android:max="1000"
            app:showSeekBarValue="true" />
        <SwitchPreferenceCompat
            app:key="auto_caps"
            app:title="@string/pref_auto_caps"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="auto_space"
            app:title="@string/pref_auto_space"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="double_space_period"
            app:title="@string/pref_double_space_period"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="space_scrubbing"
            app:title="@string/pref_space_scrubbing"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_dictionary">
        <ListPreference
            app:key="startup_language"
            app:title="@string/pref_startup_language"
            app:entries="@array/pref_language_entries"
            app:entryValues="@array/pref_language_values"
            app:defaultValue="ID"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="slang_boost"
            app:title="@string/pref_slang_boost"
            app:defaultValue="true" />
        <ListPreference
            app:key="decay_half_life"
            app:title="@string/pref_decay_half_life"
            app:entries="@array/pref_decay_entries"
            app:entryValues="@array/pref_decay_values"
            app:defaultValue="30"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="reset_user_dictionary"
            app:title="@string/pref_reset_dict"
            app:summary="@string/pref_reset_dict_summary" />
    </PreferenceCategory>

</PreferenceScreen>
